--- a/gui/mainWindow.ui
+++ b/gui/mainWindow.ui
@@ -133,6 +133,12 @@
       </item>
       <item row="8" column="1">
        <widget class="QSpinBox" name="in0TriggerSpinBox">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
         <property name="minimumSize">
          <size>
           <width>100</width>
@@ -149,6 +155,12 @@
       </item>
       <item row="9" column="1">
        <widget class="QSpinBox" name="in1TriggerSpinBox">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
         <property name="minimumSize">
          <size>
           <width>100</width>
@@ -213,7 +225,20 @@
        </widget>
       </item>
       <item row="0" column="1">
-       <widget class="QSpinBox" name="pulseTrainSpinBox"/>
+       <widget class="QSpinBox" name="pulseTrainSpinBox">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>150</width>
+          <height>0</height>
+         </size>
+        </property>
+       </widget>
       </item>
       <item row="1" column="0">
        <widget class="QLabel" name="label">
@@ -224,6 +249,18 @@
       </item>
       <item row="1" column="1">
        <widget class="QComboBox" name="ch0Mode">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>150</width>
+          <height>0</height>
+         </size>
+        </property>
         <property name="currentIndex">
          <number>3</number>
         </property>
@@ -258,6 +295,18 @@
       </item>
       <item row="2" column="1">
        <widget class="QComboBox" name="ch1Mode">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>150</width>
+          <height>0</height>
+         </size>
+        </property>
         <property name="currentIndex">
          <number>3</number>
         </property>
@@ -292,6 +341,18 @@
       </item>
       <item row="3" column="1">
        <widget class="QDoubleSpinBox" name="frequency_hz">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>150</width>
+          <height>0</height>
+         </size>
+        </property>
         <property name="decimals">
          <number>3</number>
         </property>
@@ -315,6 +376,18 @@
       </item>
       <item row="4" column="1">
        <widget class="QDoubleSpinBox" name="duration_sec">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>150</width>
+          <height>0</height>
+         </size>
+        </property>
         <property name="decimals">
          <number>3</number>
         </property>
@@ -328,6 +401,12 @@
       </item>
       <item row="5" column="0">
        <widget class="QLabel" name="label_5">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
         <property name="text">
          <string>Pulse phases:</string>
         </property>
@@ -339,15 +418,21 @@
          <bool>true</bool>
         </property>
         <property name="sizePolicy">
-         <sizepolicy hsizetype="Fixed" vsizetype="Expanding">
+         <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
         <property name="minimumSize">
          <size>
-          <width>300</width>
+          <width>350</width>
           <height>100</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>550</width>
+          <height>16777215</height>
          </size>
         </property>
         <property name="font">
@@ -577,7 +662,7 @@
      <widget class="QTextBrowser" name="serialOutputBrowser">
       <property name="maximumSize">
        <size>
-        <width>500</width>
+        <width>16777215</width>
         <height>16777215</height>
        </size>
       </property>
